--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,10 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  fluttertoast: ^8.2.2
+  shared_preferences: ^2.2.0
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
